updated formatting for AbstractLabels